# projector

./: Cargo.toml  output.txt
src/: app.rs  appdata.rs  charcons.rs  cmd_queue.rs  eguiext.rs  error.rs  ext.rs  fp.rs  lib.rs  main.rs  project_wizard.rs  projects.rs  settings.rs  uiext.rs  widgets.rs
src/dgui/: directory_view.rs  dirs.rs  dirs_edit.rs  mbox.rs  mod.rs  recents.rs  tabs.rs
src/util/: alt.rs  execute.rs  fsutil.rs  marker.rs  mod.rs  rle.rs  time.rs  trigger.rs
