[package]
name = "projector"
version = "0.1.0-indev"
edition = "2021"
description = "A simple personalized project opener/creator."
repository = "https://github.com/ErisianArchitect/projector"

[dependencies]
bincode = { version = "2.0.1", features = ["derive"] }
chrono = { version = "0.4.41", features = ["serde"] }
directories = "6.0.0"
eframe = { version = "0.31.1", features = ["persistence"] }
globset = "0.4.16"
notify = "8.0.0"
rfd = "0.15.3"
run_script = "0.11.0"
same-file = "1.0.6"
shlex = "1.3.0"
strfmt = "0.2.4"
tempfile = "3.20.0"
thiserror = "2.0.12"
toml = "0.8.23"
